[gd_scene load_steps=21 format=2]

[ext_resource path="res://SavingSystem/LoadSavedScene/LoadSavedScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ChallengeCard/CardInfo.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameFonts/Righteous/Righteous-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GameFonts/Kanit/Kanit-Thin.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Cards/Fotos/WhereistheBall.png" type="Texture" id=6]
[ext_resource path="res://Sounds/kenney_interfacesounds/Audio/open_004.ogg" type="AudioStream" id=7]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=9]
[ext_resource path="res://UI/ChallengeCard/NextCard.gd" type="Script" id=10]
[ext_resource path="res://UI/ChallengeCard/NewCard.gd" type="Script" id=11]
[ext_resource path="res://UI/ChallengeCard/CardHearder.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/Keyboard/Shortcut_space.tscn" type="PackedScene" id=13]
[ext_resource path="res://Cards/Fotos/Travelling.png" type="Texture" id=14]
[ext_resource path="res://Fotos/zoom_out.png" type="Texture" id=15]
[ext_resource path="res://Fotos/zoom_out_selected.png" type="Texture" id=16]
[ext_resource path="res://Fotos/zoom_selected.png" type="Texture" id=17]
[ext_resource path="res://Fotos/zoom.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 1
outline_color = Color( 0.760784, 0.647059, 0.776471, 1 )
extra_spacing_top = -18
font_data = ExtResource( 5 )

[node name="NewCard" type="Spatial"]
script = ExtResource( 11 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -1.1225
margin_right = 2.0
margin_bottom = -1.1225
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundRect" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.0
margin_top = -191.0
margin_right = 352.0
margin_bottom = 231.0
rect_min_size = Vector2( 700, 400 )
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color( 0.854902, 0.905882, 0.666667, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardHeader" parent="Control/BackgroundRect" instance=ExtResource( 12 )]
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1.0
margin_bottom = 113.0

[node name="VBoxContainer" parent="Control/BackgroundRect/CardHeader" index="0"]
margin_top = 37.0
margin_bottom = 75.0

[node name="Title" parent="Control/BackgroundRect/CardHeader/VBoxContainer" index="0"]
visible = false

[node name="ChallengeTitle" parent="Control/BackgroundRect/CardHeader/VBoxContainer" index="1"]
margin_top = 0.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )

[node name="PlayerAvatar" parent="Control/BackgroundRect/CardHeader" index="1"]
margin_top = 21.0
margin_bottom = 91.0

[node name="GridContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -100.0
margin_right = 350.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GridContainer"]
margin_right = 600.0
margin_bottom = 320.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = -10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardColor" type="ColorRect" parent="Control/GridContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 600, 320 )
rect_pivot_offset = Vector2( 388.889, 585.786 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.87
color = Color( 0.318603, 0.519531, 0.101471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardInfo" type="VBoxContainer" parent="Control/GridContainer/VBoxContainer/CardColor"]
margin_top = 2.0
margin_right = 613.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 250 )
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cardColor = NodePath("..")
backColor = NodePath("../../../../BackgroundRect")
title = NodePath("../../../../BackgroundRect/CardHeader/VBoxContainer/ChallengeTitle")

[node name="MinigameSound" type="AudioStreamPlayer" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo"]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo"]
margin_left = 15.0
margin_top = 9.0
margin_right = 598.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 300 )
rect_clip_content = true
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Instructions" type="Label" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer"]
margin_top = 25.0
margin_right = 250.0
margin_bottom = 275.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 250, 250 )
size_flags_vertical = 6
size_flags_stretch_ratio = 8.44
custom_fonts/font = SubResource( 2 )
text = "placeholder"
valign = 1
autowrap = true

[node name="ZoomedInImage" type="TextureRect" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer"]
visible = false
margin_right = 500.0
margin_bottom = 300.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ZoomOutButton" type="TextureButton" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer"]
visible = false
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 6
size_flags_vertical = 10
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer/ZoomOutButton" instance=ExtResource( 13 )]
margin_left = 484.0
margin_top = 205.0
margin_right = 532.0
margin_bottom = 221.0

[node name="TextureRect" type="TextureRect" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer"]
margin_left = 254.0
margin_top = 50.0
margin_right = 504.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="ZoomInButton" type="TextureButton" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer"]
margin_left = 508.0
margin_top = 211.0
margin_right = 583.0
margin_bottom = 300.0
rect_min_size = Vector2( 75, 89 )
size_flags_horizontal = 6
size_flags_vertical = 10
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" parent="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer/ZoomInButton" instance=ExtResource( 13 )]
margin_top = -20.0
margin_bottom = -4.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/GridContainer"]
margin_left = 615.0
margin_top = 231.0
margin_right = 690.0
margin_bottom = 320.0
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="Avatar" type="TextureRect" parent="Control/GridContainer/VBoxContainer2"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Control/GridContainer/VBoxContainer2"]
margin_right = 75.0
margin_bottom = 89.0
rect_min_size = Vector2( 75, 89 )
size_flags_horizontal = 8
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
nextCard = "res://UI/ChallengeCard/EvaluateCard.tscn"

[node name="HBoxContainer" parent="Control/GridContainer/VBoxContainer2/NextButton" instance=ExtResource( 13 )]
margin_top = -20.0
margin_bottom = -4.0

[node name="LoadMapSceneButton" type="Button" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
custom_fonts/font = ExtResource( 3 )
text = "LOAD MAP SCENE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSavedScene" parent="." instance=ExtResource( 1 )]

[node name="UISoundManager" parent="." instance=ExtResource( 8 )]

[connection signal="data_saved" from="." to="Control/GridContainer/VBoxContainer/CardColor/CardInfo" method="save_card_info"]
[connection signal="data_saved" from="." to="Control/GridContainer/VBoxContainer2/NextButton" method="save_data"]
[connection signal="type_saved" from="." to="Control/GridContainer/VBoxContainer/CardColor/CardInfo" method="save_cardType"]
[connection signal="type_saved" from="." to="Control/GridContainer/VBoxContainer2/NextButton" method="save_cardType"]
[connection signal="pressed" from="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer/ZoomOutButton" to="Control/GridContainer/VBoxContainer/CardColor/CardInfo" method="enable_zoom"]
[connection signal="pressed" from="Control/GridContainer/VBoxContainer/CardColor/CardInfo/HBoxContainer/ZoomInButton" to="Control/GridContainer/VBoxContainer/CardColor/CardInfo" method="enable_zoom"]
[connection signal="button_down" from="Control/GridContainer/VBoxContainer2/NextButton" to="UISoundManager" method="select"]
[connection signal="pressed" from="Control/GridContainer/VBoxContainer2/NextButton" to="Control/GridContainer/VBoxContainer2/NextButton" method="showNextCard"]
[connection signal="pressed" from="Control/LoadMapSceneButton" to="LoadSavedScene" method="load_saved_scene"]

[editable path="Control/BackgroundRect/CardHeader"]
